<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000"
    android:orientation="vertical"
    android:textColor="#fff"
    tools:context=".Settings" >

    <CheckBox
        android:id="@+id/notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000"
        android:checked="true"
        android:text="@string/notify"
        android:textColor="#fff" />

    <CheckBox
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000"
        android:checked="true"
        android:text="@string/sound"
        android:textColor="#fff" />

    <CheckBox
        android:id="@+id/vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000"
        android:checked="true"
        android:text="@string/vibrate"
        android:textColor="#fff" />

    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="#fff" />



</LinearLayout>